auto publishing updates to notebooks

--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89416ed4",
+   "id": "3e2ff1d6",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab913baf",
+   "id": "63481f77",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821a6234",
+   "id": "103b00b6",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af58e117",
+   "id": "6f1f28f9",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993ae859",
+   "id": "384a5f99",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "789995f8",
+   "id": "137854b7",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51b2b4c",
+   "id": "972f13fc",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872294c1",
+   "id": "b5a21aa7",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915de5df",
+   "id": "3aadf9f0",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-97364e78-9f20-4b79-a1ce-533c0bfa88d6'></a>\n",
+    "<a id='equation-3ea43d1d-ac7b-47cb-a027-fbe6d0d5e3c9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-40f141ea-c7f9-4dde-84a0-3ae8f5d423e4'></a>\n",
+    "<a id='equation-6d1ef095-1b1d-4055-843b-ff04914cd4c6'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ac1950",
+   "id": "5be3b642",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-f815072a-447f-448e-b3be-a72f1d858da4'></a>\n",
+    "<a id='equation-5cb7db07-22f8-4909-846f-7e68a30cf9b1'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-d7803261-cd0d-4772-a25c-64f0e989984a'></a>\n",
+    "<a id='equation-8699c27e-f35e-47b8-b3dd-302d5683c93f'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-e7ab10ff-4638-4643-b17c-36a4cf6f8bc8'></a>\n",
+    "<a id='equation-94b76718-4198-4854-9019-153eb34ac593'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-5af164fb-42bc-46ef-b3ea-437b146bc897'></a>\n",
+    "<a id='equation-460ce2fc-d616-4207-8c42-4c2a8c30e6f1'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35eee3e0",
+   "id": "a421382e",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-7e09a80b-4ae5-46e2-bb0c-8d3f3ea9a37c'></a>\n",
+    "<a id='equation-0b7d0d05-b769-4507-98ba-2753dd3620ea'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-143a25d1-b8a8-4e3e-8c12-2a1751f62fad'></a>\n",
+    "<a id='equation-81ad551c-2c09-4174-96cb-6b12cdf70284'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d493a64",
+   "id": "ac5343f3",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92c4be04",
+   "id": "8fbc5318",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54064125",
+   "id": "3e64ad46",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad15be52",
+   "id": "ae7be46c",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f9bce1",
+   "id": "27412692",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432c7991",
+   "id": "97a51d57",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1feca7",
+   "id": "8ab8c0df",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca63cd5",
+   "id": "b974ef82",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce8143d",
+   "id": "82ec1286",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f557d1ae",
+   "id": "837dc8f0",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb8dd73",
+   "id": "20913090",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c3e15e",
+   "id": "c301be6f",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b484163",
+   "id": "ade633bd",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebfbd705",
+   "id": "5248ce65",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e506aa",
+   "id": "22d1e642",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197f107b",
+   "id": "6c0acaba",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fccaa3c4",
+   "id": "46e15073",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8901df49",
+   "id": "ea3120de",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f4a859",
+   "id": "07a34a92",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "797fcd52",
+   "id": "d4de0493",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4989c099",
+   "id": "4648d73f",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5388fd",
+   "id": "d4dc07ed",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e15de7f",
+   "id": "a7a8e220",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c20510",
+   "id": "48904bc5",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8d7e0f",
+   "id": "b9798f38",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2ecee9",
+   "id": "fbd9ba73",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76a1a08",
+   "id": "6376e05f",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c24e90",
+   "id": "ef0503e4",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c95340",
+   "id": "e3fb659b",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e880f0f3",
+   "id": "c1ae9a15",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4872b2",
+   "id": "44cd4938",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bceb899",
+   "id": "8f3837dc",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05074d55",
+   "id": "ab664ee6",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a08ff27",
+   "id": "3a1f1725",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c106f7",
+   "id": "edcd27c8",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5204bff6",
+   "id": "5665c239",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c830d79d",
+   "id": "15d16c14",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093fbdff",
+   "id": "e50cd2d1",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d94e9e1",
+   "id": "1fc83c9d",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2026e118",
+   "id": "3007fa49",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd159ff",
+   "id": "61b42ae5",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f717f79",
+   "id": "862805b8",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be908a6b",
+   "id": "910ecfc9",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ba448b",
+   "id": "170059c5",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccdec1d",
+   "id": "df1f4d55",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887288c5",
+   "id": "d821fb6e",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde28f10",
+   "id": "c790579f",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44c4156",
+   "id": "bd150a14",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5c14848",
+   "id": "e405a5a7",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fca697",
+   "id": "86c8719d",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb2b33f",
+   "id": "1804687b",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43cb0b6",
+   "id": "f9f13adc",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be078e6a",
+   "id": "afe7e6a4",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c8be48",
+   "id": "a2be6f58",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d3070dd",
+   "id": "28febc74",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d13013",
+   "id": "6d3d4e15",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd6973e",
+   "id": "aa0a7c4a",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317eb562",
+   "id": "ae943db3",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5250afe8",
+   "id": "4071ddbc",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792d8942",
+   "id": "e84242ad",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5e7f47",
+   "id": "c3e43bcb",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440a6d74",
+   "id": "fc6e538c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eecf6ca",
+   "id": "bc494875",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b556a37",
+   "id": "5daadd7a",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0eb41f0",
+   "id": "58d7e34f",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6c7021",
+   "id": "77997cad",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbe3014d",
+   "id": "fb892416",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3726034",
+   "id": "af4f3a19",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1418,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.1143708,
+  "date": 1754288151.759112,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
