--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87068c18",
+   "id": "af4ec93d",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1dcff32",
+   "id": "7ef58e2f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d07a88ec",
+   "id": "e4c44a41",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d06189",
+   "id": "d786f930",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89bca22",
+   "id": "0cc85108",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ab92a9",
+   "id": "c531f835",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142fc6d9",
+   "id": "17f4c890",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d90c02",
+   "id": "c9298ca0",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e65f2d",
+   "id": "1c7f8316",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c7ecc8",
+   "id": "72bf79a3",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4695dec3",
+   "id": "d369a74c",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02ce949",
+   "id": "b2f04513",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e92ee23",
+   "id": "74cacd12",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b325e2a",
+   "id": "3004b72a",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6abbd93",
+   "id": "27cf5a69",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfe4e7a",
+   "id": "a0d1ad0f",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "523dc64f",
+   "id": "56bd5eb1",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc00ac0",
+   "id": "fee2d64f",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90da92ac",
+   "id": "bf127479",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797feba7",
+   "id": "6ddc2c1e",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c1c82c",
+   "id": "f3f6d74f",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "541a05d2",
+   "id": "b61f20fa",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b661ec",
+   "id": "bfe65fda",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a49795",
+   "id": "693b858c",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbacb811",
+   "id": "db6bd2c8",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1530f1ad",
+   "id": "08797d7c",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f6e6040",
+   "id": "eb0f517b",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23a5f589",
+   "id": "c7a937e7",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06652560",
+   "id": "a38bb3f7",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd40cd6",
+   "id": "20e23e40",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2dad35b",
+   "id": "c0a73a8b",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08020fac",
+   "id": "41e0bf48",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f81dd3",
+   "id": "407ad5ec",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5197edab",
+   "id": "0d8680d6",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c6f077",
+   "id": "8599103d",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4ef3b9",
+   "id": "611134ef",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.1462536,
+  "date": 1754288151.787161,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
