--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "284cb9b3",
+   "id": "67d94e6d",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX and Optax"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6d8ba3",
+   "id": "1f9de3a8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c1ac938",
+   "id": "71282e12",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f42e36fa",
+   "id": "28c046ba",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12611e72",
+   "id": "7651978d",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c76df7",
+   "id": "77b87c01",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7224e4f",
+   "id": "51caca04",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d31191fd",
+   "id": "0a68a4ff",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c3ae35",
+   "id": "0d6b353d",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4713ceb",
+   "id": "63204a2b",
    "metadata": {},
    "source": [
     "The next piece of code is repeated from [our Keras lecture](https://jax.quantecon.org/keras.html) and generates\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96565fa1",
+   "id": "909e0d11",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3657e7aa",
+   "id": "757ff16b",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66cedf52",
+   "id": "b78c6c7b",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34b2fb4",
+   "id": "91cf5140",
    "metadata": {},
    "source": [
     "Here is a function to train the model."
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15bb3d0",
+   "id": "2595405e",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9366c2",
+   "id": "a1a0125b",
    "metadata": {},
    "source": [
     "The next function visualizes the prediction."
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f125e05d",
+   "id": "799ff370",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234fa2c9",
+   "id": "a879ed0d",
    "metadata": {},
    "source": [
     "Here’s a function to run all the routines above."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d816ac1",
+   "id": "9388cde5",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ceaa4f",
+   "id": "b4ff44bd",
    "metadata": {},
    "source": [
     "Let’s put it to work:"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0679e7d3",
+   "id": "9345d0d7",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b568bb1",
+   "id": "919df8a3",
    "metadata": {},
    "source": [
     "We’ve seen this figure before and we note the relatively low final MSE."
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b972a4ce",
+   "id": "42e5b2ff",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67e5953",
+   "id": "f9d65195",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229ae1c8",
+   "id": "b1b8ecf9",
    "metadata": {
     "hide-output": false
    },
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f6cbe7",
+   "id": "9aae7e55",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989e1fee",
+   "id": "ee9ce606",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a4a51e",
+   "id": "2b56e767",
    "metadata": {
     "hide-output": false
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52eebf57",
+   "id": "dbed9a73",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e685dba5",
+   "id": "2dd84081",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1288cb7e",
+   "id": "bd9d3f35",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b557c75",
+   "id": "91055683",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b56ffe",
+   "id": "8e4ac298",
    "metadata": {},
    "source": [
     "The line above seems kind of magical, since we are differentiating with respect\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b64ec2",
+   "id": "2325a339",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309db184",
+   "id": "ce52c74c",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82295e63",
+   "id": "3815aae2",
    "metadata": {},
    "source": [
     "We are implementing the gradient descent update"
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbfb11a",
+   "id": "e411bdb2",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb2a7618",
+   "id": "8e147e0b",
    "metadata": {},
    "source": [
     "This is nontrivial for a complex structure such as a neural network, so how is\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deea9357",
+   "id": "d1d2a56b",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1273d87",
+   "id": "b88c120a",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c679ea2b",
+   "id": "33518f75",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f359d037",
+   "id": "dc8c2e3b",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61065cbb",
+   "id": "8f4681e6",
    "metadata": {},
    "source": [
     "This figure shows MSE across iterations:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7449da05",
+   "id": "f7091227",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8fd2cd0",
+   "id": "677fe717",
    "metadata": {},
    "source": [
     "Let’s check the final MSE on the validation data, at the estimated parameters."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3346e7c",
+   "id": "d1bea276",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d85186",
+   "id": "58579ebe",
    "metadata": {},
    "source": [
     "This MSE is not as low as we got for Keras, but we did quite well given how\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "994a8dac",
+   "id": "09d04eb5",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc5b08f",
+   "id": "94d3d4d9",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0a32208",
+   "id": "06cfbc3f",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8e3282",
+   "id": "46051bd8",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa26396e",
+   "id": "ef041034",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea7bedf",
+   "id": "45239b59",
    "metadata": {
     "hide-output": false
    },
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e15bcd0",
+   "id": "b44400f1",
    "metadata": {},
    "source": [
     "The resulting MSE is the same as our hand-coded routine."
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd4ddf6",
+   "id": "1a0e2ea7",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d85789c4",
+   "id": "92949834",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e3ab964",
+   "id": "17869f22",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545874eb",
+   "id": "3e343142",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c51b9b",
+   "id": "36ce240a",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc2aaff",
+   "id": "2e977cf4",
    "metadata": {},
    "source": [
     "Here’s the MSE."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee714871",
+   "id": "a8fff903",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9d0b64",
+   "id": "cfe5f2e1",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd99333d",
+   "id": "66aff789",
    "metadata": {
     "hide-output": false
    },
@@ -945,7 +945,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.3260736,
+  "date": 1754288151.943135,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
