--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd726d3b",
+   "id": "f325d97b",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d32763e",
+   "id": "30d517ce",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ef43ca",
+   "id": "ac330a26",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284dd9c8",
+   "id": "a7241e30",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61550917",
+   "id": "23423dc4",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0781cd77",
+   "id": "7c2c83eb",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e034a74e",
+   "id": "66d3e6a7",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84691e2",
+   "id": "6c5b91f2",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d968fb0c",
+   "id": "b6cc6bcc",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7843b8b",
+   "id": "1dee92fd",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feac51bf",
+   "id": "9cc5b05b",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47677601",
+   "id": "cb5a5c40",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc130e16",
+   "id": "0eee2a5d",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e19a0449",
+   "id": "85b93e63",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "596b4ae5",
+   "id": "800a751d",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df6545b",
+   "id": "bf87ab03",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35bc739c",
+   "id": "e8b9c33c",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30942e3d",
+   "id": "7e75e05f",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1eb8213",
+   "id": "46d50212",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7826a8",
+   "id": "a35c0c38",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10387b13",
+   "id": "7d431ac6",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90333fa9",
+   "id": "5d7dc6df",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eeb4606",
+   "id": "3155d643",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da519ec1",
+   "id": "5256d55b",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68841c1a",
+   "id": "2a20251f",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1e4db0",
+   "id": "a3b55cd6",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e770a3c8",
+   "id": "b577d2cd",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e97af7",
+   "id": "69335db5",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e117e01",
+   "id": "d773908e",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4046e403",
+   "id": "6b423803",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9ed143",
+   "id": "929ee634",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb23a133",
+   "id": "43bac6f3",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f1780d",
+   "id": "2a42221e",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae7d4d8",
+   "id": "63aa6a78",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14945ab7",
+   "id": "88c542ec",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0610188e",
+   "id": "d92b3197",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b55b5f5",
+   "id": "532fa5e8",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02e338e6",
+   "id": "b4d586bf",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d7689dc",
+   "id": "20e82646",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b19bdf",
+   "id": "c50f37c2",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ae97ec1",
+   "id": "0105c6b7",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c7a198",
+   "id": "e5b2febb",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "465cf052",
+   "id": "be77b438",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "646bbc90",
+   "id": "41b928b7",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0110e87b",
+   "id": "5c3e4691",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "742e9a5a",
+   "id": "b197d336",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282b48c3",
+   "id": "ce4bec80",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a95476b8",
+   "id": "aef03b46",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1765c506",
+   "id": "8e20f5d1",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd3dc2b",
+   "id": "e8d4d7e1",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ad671c",
+   "id": "9c6dafee",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -670,7 +670,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.498885,
+  "date": 1754288151.9866433,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
