--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cedb7bb5",
+   "id": "3bcab7ed",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de12b7a2",
+   "id": "bf669eeb",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b17030",
+   "id": "bbaab2e3",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ec8ec8",
+   "id": "5bb7ef55",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e09377",
+   "id": "20ca2903",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdbf0ac1",
+   "id": "3efae30a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0844ab87",
+   "id": "05656037",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12de2b3f",
+   "id": "cfe52b35",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413a733b",
+   "id": "2d2f01fa",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cece68f4",
+   "id": "4351d0fd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b00a786",
+   "id": "0639cf6f",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f5b907",
+   "id": "1279362f",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ec4aa9",
+   "id": "70991cf5",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a86b62d",
+   "id": "635f5dbc",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ba079e",
+   "id": "2ec44148",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac351ce3",
+   "id": "20c666a8",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119b9454",
+   "id": "6b4426f3",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab597207",
+   "id": "d5bf00d2",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6335d1",
+   "id": "90eee4f6",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25511f45",
+   "id": "a9a9607a",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39cf847",
+   "id": "89e54fb9",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c218bb4",
+   "id": "af5d5dc1",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4bc420",
+   "id": "4f5f4112",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc7d279",
+   "id": "b4e0ce77",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bc4b8a",
+   "id": "50af1fc9",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334ad8df",
+   "id": "d8d4c330",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1eb1bb",
+   "id": "7b9bfac4",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afd29df",
+   "id": "cae6d332",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bcf0309",
+   "id": "2b96bce6",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc44867",
+   "id": "3f3e83f1",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56a12da",
+   "id": "42edc83c",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db52e03",
+   "id": "f2e26611",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db256a37",
+   "id": "a71bf7e8",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b2d760",
+   "id": "7e5cd904",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc58b683",
+   "id": "cda6f3ff",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a3cf34",
+   "id": "0536b71d",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3066fec",
+   "id": "38deee7d",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488fe0ea",
+   "id": "029fe356",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879e1cb7",
+   "id": "32ebf5a8",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdd09f1",
+   "id": "92194ef8",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb99b3c",
+   "id": "8369f6cc",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9fca9f",
+   "id": "0063740e",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e21154",
+   "id": "083a18f0",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f407d8",
+   "id": "5191710c",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb5ac66",
+   "id": "e3548afd",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba968069",
+   "id": "0c98a700",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f167b0",
+   "id": "892af4a1",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31563d77",
+   "id": "6debd3df",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670c7be4",
+   "id": "e34bf838",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfe9a70",
+   "id": "0c94196e",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5bcae3d",
+   "id": "7fba2e8e",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3edb8362",
+   "id": "ee51d4b0",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cfdf36",
+   "id": "3d672975",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de3a2f4",
+   "id": "8bfc52dd",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00aad955",
+   "id": "213cf6fd",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b03fa5",
+   "id": "4fa0d989",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347d747e",
+   "id": "f5135dc5",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c713566d",
+   "id": "f812ad8b",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "481d6c99",
+   "id": "8cf3b2c3",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2181fea",
+   "id": "af519ced",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c757453a",
+   "id": "3dc6d1e8",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a940cac2",
+   "id": "b41bc72e",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187a0716",
+   "id": "0d7aa0fe",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d7888d",
+   "id": "06dd6ae1",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985bc9c9",
+   "id": "9a065371",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8ff17a",
+   "id": "747944dd",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94522610",
+   "id": "95376f53",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53756e09",
+   "id": "8be7bad0",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0443a53",
+   "id": "e797ffec",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.767808,
+  "date": 1754288152.2242517,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
