--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3087af58",
+   "id": "44e1a6b8",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fd834e",
+   "id": "e1d41ac8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf756e5",
+   "id": "c43f93e8",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb20421",
+   "id": "018836fe",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a82d7a9",
+   "id": "c729eed0",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa75ade",
+   "id": "9198c096",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b250872",
+   "id": "1088e471",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d3a63a",
+   "id": "0f5de7e9",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307262c2",
+   "id": "951a84be",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f644bbec",
+   "id": "1823aca9",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "019e25d0",
+   "id": "c64a0c72",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8021fff4",
+   "id": "83a24f62",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce5ae11",
+   "id": "621d364c",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0bd1fdd",
+   "id": "a3dbc886",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eddce3c4",
+   "id": "a76b5f2b",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "241658e1",
+   "id": "dc0939ad",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9daa8e5",
+   "id": "694733e8",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a8be60b",
+   "id": "9dca88e7",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183526f4",
+   "id": "5d60c772",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34edf21d",
+   "id": "85224ccb",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811999cc",
+   "id": "1e6a0afe",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c93ee5a",
+   "id": "4e36cfe0",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371bc288",
+   "id": "6e7157bc",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089fd74e",
+   "id": "5188d056",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78fa9cf3",
+   "id": "7d951355",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec12194",
+   "id": "ec240735",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef008a60",
+   "id": "2dd78b9d",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6b99ae",
+   "id": "f5699525",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6e80f6",
+   "id": "60976c8e",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "356b328e",
+   "id": "c164c4ff",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941d9fc7",
+   "id": "4e6c64e0",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47cac44a",
+   "id": "c1061924",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879515a4",
+   "id": "ef2a5cc0",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7231dc0e",
+   "id": "824d8c4c",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9317f824",
+   "id": "dc249736",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2303f837",
+   "id": "4f23ca91",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74cf609b",
+   "id": "f61eeb61",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a7528e7",
+   "id": "6d3fe93a",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f438fd",
+   "id": "21cffc2e",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14315374",
+   "id": "112e96f5",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac242836",
+   "id": "e44ffb21",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd0b4d8",
+   "id": "4d132d15",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94979d82",
+   "id": "4d0a3935",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70c4a7c",
+   "id": "5e63cb6e",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a32489f",
+   "id": "5f593ed2",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da2b430b",
+   "id": "1455f062",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e94b8a",
+   "id": "3476db47",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58a9252",
+   "id": "7538431b",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64d79a6",
+   "id": "f26ab6d0",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c504ff1",
+   "id": "7b59e48c",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152f0948",
+   "id": "57b8c932",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "036c9376",
+   "id": "16186aae",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ccdc8c",
+   "id": "27ecc5ed",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d8f1c46",
+   "id": "ae18d527",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed85855",
+   "id": "b9af36c1",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e9a6ba",
+   "id": "3a84115e",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa844a0",
+   "id": "536307d4",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cdc1d14",
+   "id": "1ac86121",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21654daa",
+   "id": "86b187c2",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a5093b8",
+   "id": "ef2da52f",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05418f4",
+   "id": "81ecf2e5",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34b8a0d",
+   "id": "4fa6ba8c",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f770bdd",
+   "id": "23b74025",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb1ba8e",
+   "id": "b5ca9814",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c75f38",
+   "id": "2311cd3e",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2dfb277",
+   "id": "d10f1f93",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63c695a",
+   "id": "0d6cb6ac",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84553e34",
+   "id": "c651ef0f",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd7e8a8",
+   "id": "011d78e2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cefc21",
+   "id": "53f64338",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cd1d7a",
+   "id": "28da1622",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a39270ba",
+   "id": "89bf3311",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44adaa7b",
+   "id": "3e2f044f",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c4de6e",
+   "id": "075942d8",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d1d73a",
+   "id": "ac2f7939",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd8d2f7",
+   "id": "ae148198",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40739a9b",
+   "id": "86ac253c",
    "metadata": {
     "hide-output": false
    },
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "325f6c1f",
+   "id": "b7beacdc",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1498,7 +1498,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.8692992,
+  "date": 1754288152.314877,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
