--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9e5bf0b",
+   "id": "25f7843e",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd195c4",
+   "id": "7a8b0706",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896812.0798893,
+  "date": 1754288152.398609,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
