--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b36c2fd9",
+   "id": "5fd5d0ee",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10bf89fd",
+   "id": "84a4416f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32bdd98",
+   "id": "26ae8971",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1c4403",
+   "id": "d08da857",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4cf53c7",
+   "id": "f45d7552",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f8fc4d1",
+   "id": "f1bb7afa",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5af278b",
+   "id": "00eafe4f",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c3781e",
+   "id": "0278451c",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821bdb0b",
+   "id": "dcf91d91",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129964d2",
+   "id": "1a8ce7b7",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3239d86",
+   "id": "0752413f",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d13f10",
+   "id": "569fbecf",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1720152",
+   "id": "7ed53384",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17454930",
+   "id": "90e6c715",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4b160b7",
+   "id": "6cecc793",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1cb2e8",
+   "id": "f67d557d",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3dd421",
+   "id": "f344e950",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a994e7cb",
+   "id": "9bcb589f",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e690f7a2",
+   "id": "4ea36d6d",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36248ed1",
+   "id": "2841f3b7",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f122068c",
+   "id": "7f5ca21c",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf79e28",
+   "id": "4200d062",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd892895",
+   "id": "70c91832",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d606ea",
+   "id": "48d3e616",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eecbd96d",
+   "id": "0c2a5d7b",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d16213",
+   "id": "7558b03c",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "270ccc0f",
+   "id": "c3fd1187",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb119d7",
+   "id": "be43ceb8",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b40f4569",
+   "id": "fcef66f0",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dd096ac",
+   "id": "443e580b",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180a499c",
+   "id": "4505d158",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26427ce",
+   "id": "6a118939",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0365445",
+   "id": "9b497559",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68160e75",
+   "id": "77530418",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13222a5",
+   "id": "4eb6fe91",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b442f9",
+   "id": "724fbc7f",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6641c2",
+   "id": "34aa3f08",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0469e4d5",
+   "id": "2c736e06",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02c59fb6",
+   "id": "712d1d91",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbc58f31",
+   "id": "4362222a",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968d0a23",
+   "id": "566f3d3c",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbfd995",
+   "id": "46eca5d7",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386f92cc",
+   "id": "5531e471",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -692,7 +692,7 @@
   }
  ],
  "metadata": {
-  "date": 1750896811.3497372,
+  "date": 1754288151.964571,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
